Overflow responsiveness fixes

--- a/WebApp/src/app/account-management/account-creator/account-creator.component.scss
+++ b/WebApp/src/app/account-management/account-creator/account-creator.component.scss
@@ -38,4 +38,8 @@ form {
             filter:saturate(50%);
         }
     }
+
+    .error-field {
+        color: red;
+    }
 }
