--- a/WebApp/src/app/account-management/account-management.component.scss
+++ b/WebApp/src/app/account-management/account-management.component.scss
@@ -10,6 +10,7 @@ body {
     border: 1px solid rgba($color: #000000, $alpha: 0.04);
     border-radius: 8px;
     box-shadow: $default-box-shadow;
+    overflow: hidden;
 
     .button-section {
         display: flex;
